--- a/Asset/Pages/style2.css
+++ b/Asset/Pages/style2.css
@@ -1,4 +1,5 @@
 .border {
+  text-align: center;
     color: blue;
     background-color: aqua;
 }
@@ -39,13 +40,13 @@
    
   }
   
-  /* Hide the images by default */
+  
   .mySlides {
     display: none;
 
   }
   
-  /* Next & previous buttons */
+  
   .prev, .next {
     cursor: pointer;
     position: absolute;
@@ -61,18 +62,18 @@
     user-select: none;
   }
   
-  /* Position the "next button" to the right */
+ 
   .next {
     right: 0;
     border-radius: 3px 0 0 3px;
   }
   
-  /* On hover, add a black background color with a little bit see-through */
+  
   .prev:hover, .next:hover {
     background-color: rgba(0,0,0,0.8);
   }
   
-  /* Caption text */
+  
   .text {
     color: #f2f2f2;
     font-size: 15px;
@@ -83,7 +84,7 @@
     
   }
   
-  /* Number text (1/3 etc) */
+  
   .numbertext {
     color: #f2f2f2;
     font-size: 12px;
@@ -92,7 +93,7 @@
     top: 0;
   }
   
-  /* The dots/bullets/indicators */
+  
   .dot {
     cursor: pointer;
     height: 15px;
@@ -108,7 +109,7 @@
     background-color: #717171;
   }
   
-  /* Fading animation */
+  
   .fade {
     animation-name: fade;
     animation-duration: 1.5s;
